# backend-bot

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
bot/: __main__.py
bot/configs/: backend.py  bot.py  get_settings.py
bot/exceptions/: common.py
bot/handlers/: character.py  exception.py  message.py  start.py
bot/models/: character.py  message.py  progress.py  user.py
bot/requests/: base.py  character.py  message.py  user.py
bot/utils/: config.py  finite_state_machine.py  formatter.py  loader.py
