[tool.poetry]
name = "backend-bot"
version = "0.1.0"
description = ""
authors = ["huscker <egostalker03@mail.ru>"]
readme = "README.md"
packages = [{include = "backend_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = {version = "^3.0.0b6", allow-prereleases = true}
aiohttp = "^3.8.3"
frozenlist = "^1.3.3"
pydantic = "^1.10.4"
python-dotenv = "^0.21.0"
pytz = "^2022.7.1"
aiosignal = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
